# agent0-core

./: AGENT_POLICY.md  README.md  SECURITY.md  pyproject.toml
.agent0/: required_paths.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: IDENTITY_QUICKSTART.md  README.md  TOOLING_STANDARD.md
identity/: README.md  forge_check.py  verify_identity.py
scripts/: README.md
tools/: README.md
