[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent0-core"
version = "0.1.0"
description = "ToadAid Agent0 Core - Identity and tooling for the pond"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "ToadAid", email = "toadaid.agent0@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/ToadAid/agent0-core"
Documentation = "https://toadaid.github.io"
Repository = "https://github.com/ToadAid/agent0-core"

[project.scripts]
verify-identity = "identity.verify_identity:main"
forge-check = "identity.forge_check:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["identity*", "tools*", "scripts*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E501"]
